--- a/viewpageindicator/build.gradle
+++ b/viewpageindicator/build.gradle
@@ -1,15 +1,5 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-
-    dependencies{
-        classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
-    }
-}
 
 apply plugin: 'com.android.library'
-apply plugin: 'com.jakewharton.hugo'
 
 android {
     compileSdkVersion 22
@@ -31,5 +21,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.1'git
+    compile 'com.android.support:appcompat-v7:22.1.1'
 }
