--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="no.jlagos.sample" >
+    package="no.jlagos.viewpagerindicator.sample" >
 
     <application
         android:allowBackup="true"
